<resources>
    <string name="app_name">ParkingAlly</string>
    <string name="slogan">Easy Car Park Find.</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_login">Already have a ParkingAlly account?</string>
    <string name="log_in">Log In</string>
    <string name="terms_and_privacy_policy">By using ParkingAlly, you agree to our <u>Terms of Use</u> and <u>Privacy Policy</u>.</string>
    <string name="email_address">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password"><u>Forgot Your Password</u></string>
    <string name="input_error_password">Password input error</string>
    <string name="park_id">ID:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="history">Parking History</string>
    <string name="payment">Payment</string>
    <string name="help">Feedback</string>
    <string name="legal">Legal</string>
    <string name="sample_user_name">Parking Ally</string>
    <string name="sample_email">email@parkingally.com</string>
    <string name="search">Search</string>
    <string name="title_activity_parking_lot_detail">ParkingLotDetailActivity</string>
    <string name="car_park_image">car park image</string>
    <string name="sample_phone_number">+(254) 712345678</string>
    <string name="vehicles">Vehicles</string>
    <string name="sign_out">Sign Out</string>
</resources>
