<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LandingPageActivity">

    <TextView
        android:id="@+id/landing_txv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/coquette_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/landing_tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_txv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/helvetica_neue_medium"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/landing_btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_below="@id/landing_tv_slogan"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:width="300dp"
        android:background="@drawable/white_rect_border_drawable"
        android:text="@string/sign_up"
        android:theme="@style/white_button_text" />

    <TextView
        android:id="@+id/landing_txv_login_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_btn_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/helvetica_neue_medium"
        android:text="@string/prompt_login"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/landing_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_txv_login_request"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:width="300dp"
        android:background="@drawable/red_rect_border_drawable"
        android:fontFamily="@font/helvetica_neue_medium"
        android:text="@string/log_in"
        android:theme="@style/red_button_text" />

    <TextView
        android:id="@+id/landing_txv_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/helvetica_neue_medium"
        android:text="@string/terms_and_privacy_policy"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>