<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/showAppName"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:fontFamily="@font/coquette_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tvPromptLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lucida_grande_regular"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/edit_text_inputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPromptLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:width="300dp"
        android:background="@drawable/et_white_boarder"
        android:fontFamily="@font/helvetica_neue_medium"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:width="300dp"
        android:background="@drawable/et_white_boarder"
        android:fontFamily="@font/helvetica_neue_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="300dp"
        android:background="@drawable/red_rect_border_drawable"
        android:fontFamily="@font/lucida_grande_regular"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textAppearance="@style/red_button_text" />

    <TextView
        android:id="@+id/etForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/helvetica_neue_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="12sp" />

</RelativeLayout>