<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AccountSettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/img_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/ic_account_settings_person" />

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="22dp"
        android:text="@string/sample_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_phone_number"
        style="@style/account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/account_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phone_number"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@id/img_profile_photo"
        android:layout_marginTop="22dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_vehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lucida_grande_regular"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:text="@string/vehicles"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_add_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_vehicles"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_vehicle"
        android:drawablePadding="22dp"
        android:fontFamily="@font/helvetica_neue_medium"
        android:padding="16dp"
        android:text="Add Vehicle"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@id/tv_sign_out"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lucida_grande_regular"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:text="@string/sign_out"
        android:textSize="18sp" />

</RelativeLayout>